[gd_scene load_steps=19 format=3 uid="uid://b3kyp7wchpb83"]

[ext_resource type="Script" uid="uid://bdawwvism8vcw" path="res://scripts/main.gd" id="1_o5qli"]
[ext_resource type="Script" uid="uid://cv8x2tg6vxtq4" path="res://scripts/user_interface.gd" id="2_0wfyh"]
[ext_resource type="Script" uid="uid://bui3s4bov4767" path="res://scripts/game_world.gd" id="2_sugp2"]
[ext_resource type="Script" uid="uid://dm7fgpjkablo5" path="res://scripts/camera_controller.gd" id="3_jyhfs"]
[ext_resource type="PackedScene" uid="uid://c6p80qds44o8p" path="res://scenes/player.tscn" id="4_tbgi4"]
[ext_resource type="PackedScene" uid="uid://by6ymyc8oo57a" path="res://scenes/levels/Level01Snail.tscn" id="6_choun"]
[ext_resource type="PackedScene" uid="uid://dvt4pkpi1lic4" path="res://scenes/levels/Level02Snail.tscn" id="7_eb6dy"]
[ext_resource type="Script" uid="uid://bwkwl8n2mcbu7" path="res://scripts/level_root.gd" id="7_ya4ey"]
[ext_resource type="PackedScene" uid="uid://c5uyltcmbbrci" path="res://scenes/ui/menu_main.tscn" id="8_choun"]
[ext_resource type="PackedScene" uid="uid://cs2wubx7aq0hq" path="res://scenes/levels/Level03Snail.tscn" id="8_trceg"]
[ext_resource type="PackedScene" uid="uid://b3qlnt3du0rsh" path="res://scenes/levels/Level04Snail.tscn" id="9_a8y0u"]
[ext_resource type="PackedScene" uid="uid://c5naht0xe6c2b" path="res://scenes/ui/menu_options.tscn" id="9_ya4ey"]
[ext_resource type="PackedScene" uid="uid://dw01jx0pxjbn4" path="res://scenes/ui/menu_pause.tscn" id="10_eb6dy"]
[ext_resource type="PackedScene" uid="uid://ctffetvvtro87" path="res://scenes/levels/Level05Snail.tscn" id="10_jkv2x"]
[ext_resource type="PackedScene" uid="uid://cxx1gwp2tq8xm" path="res://scenes/levels/Level06Snail.tscn" id="11_jkv2x"]
[ext_resource type="PackedScene" uid="uid://cidd160mkyugb" path="res://intro.tscn" id="11_ya4ey"]
[ext_resource type="PackedScene" uid="uid://hfkn80rwtb23" path="res://scenes/levels/debug_level.tscn" id="12_dp3eg"]
[ext_resource type="AudioStream" uid="uid://2qkk6lyi8ck4" path="res://audio/music/Overworld-LAYER-1.ogg" id="12_muem4"]

[node name="Main" type="Node"]
script = ExtResource("1_o5qli")

[node name="GameWorld" type="Node2D" parent="." groups=["Persist"]]
script = ExtResource("2_sugp2")

[node name="Camera" type="Camera2D" parent="GameWorld"]
position = Vector2(317, -151)
zoom = Vector2(2, 2)
script = ExtResource("3_jyhfs")
stiffness = 0.4

[node name="Player" parent="GameWorld" instance=ExtResource("4_tbgi4")]
position = Vector2(58, -69)

[node name="LevelRoot" type="Node2D" parent="GameWorld"]
script = ExtResource("7_ya4ey")
levels = Dictionary[StringName, PackedScene]({
&"Level01Snail": ExtResource("6_choun"),
&"Level02Snail": ExtResource("7_eb6dy"),
&"Level03Snail": ExtResource("8_trceg"),
&"Level04Snail": ExtResource("9_a8y0u"),
&"Level05Snail": ExtResource("10_jkv2x"),
&"Level06Snail": ExtResource("11_jkv2x"),
&"debug": ExtResource("12_dp3eg")
})
level_order = Array[StringName]([&"Level01Snail", &"Level02Snail", &"Level03Snail", &"Level04Snail", &"Level05Snail", &"Level06Snail"])

[node name="MusicPlayer" type="AudioStreamPlayer" parent="GameWorld"]
stream = ExtResource("12_muem4")
bus = &"Music"

[node name="UserInterface" type="CanvasLayer" parent="."]
script = ExtResource("2_0wfyh")
menus = Dictionary[StringName, PackedScene]({
&"main": ExtResource("8_choun"),
&"options": ExtResource("9_ya4ey"),
&"pause": ExtResource("10_eb6dy")
})

[node name="VideoStreamPlayer" parent="UserInterface" instance=ExtResource("11_ya4ey")]
